--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ screen and (min-device-pixel-ratio: 2) {
 /* ========== section 2 ========== */
 
 /* ========== section 3 ========== */
-/* 
+ 
 .personnel-page {
     background-color: #F4F4FD;
 }
@@ -465,11 +465,13 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 .menu-team {
-    gap: 24px;
+    gap: 72px;
+    display: flex;
+    flex-direction: column;
 }
 
 .menu-our-team {
-    width: calc((100% - 72px)/4);
+    width: 264px;
     background-color: #FFF;
     border: 1px solid #E7E9FC;
     border-radius: 0px 0px 4px 4px;
@@ -501,7 +503,6 @@ screen and (min-device-pixel-ratio: 2) {
     letter-spacing: 0.02em;
 }
 
- */
 .social-list {
     display: flex;
     gap: 24px;
@@ -539,10 +540,26 @@ screen and (min-device-pixel-ratio: 2) {
     fill: #F4F4FD;
 }
 
+@media (min-width: 768px) {
+    .menu-team {
+        justify-content: center;
+        gap: 64px;
+        column-gap: 24px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+@media (min-width: 1158px) {
+    .menu-team {
+        gap:24px;
+    }
+}
+
 /* ========== section 3 ========== */
 
 /* ========== section 4 ========== */
-/* 
+ 
 .portfolio-title {
     color: #2e2f42;
     font-size: 36px;
@@ -555,17 +572,12 @@ screen and (min-device-pixel-ratio: 2) {
 
 .portfolio-list {
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
+    flex-direction: column;
+    align-items: center;
     row-gap: 48px;
 }
 
-.portfolio-list:first-child {
-    width: calc((100%-48px)/3);
-}
-
 .portfolio-list-item {
-    justify-content: space-between;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -609,7 +621,30 @@ screen and (min-device-pixel-ratio: 2) {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-} */
+} 
+
+@media (min-width: 768px) {
+    .portfolio-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .portfolio-list-item {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media (min-width: 1158px) {
+    .portfolio-list {
+        row-gap: 48px;
+    }
+
+    .portfolio-list-item {
+        width: calc((100% - 2 * 24px) / 3);
+    }
+}
 
 /* ========== section 4 ========== */
 
@@ -631,11 +666,13 @@ screen and (min-device-pixel-ratio: 2) {
 .page-bottom-container {
     display: flex;
     flex-direction: column;
+    margin-bottom: 72px;
 }
 
 .logo-footer {
+    display: flex;
     margin-bottom: 17px;
-    display: inline-block;
+    justify-content: center;
 }
 
 .logo-bottom {
@@ -651,6 +688,8 @@ screen and (min-device-pixel-ratio: 2) {
 .social-bottom-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-bottom: 72px;
 }
 
 .title-socmedia {
@@ -678,9 +717,7 @@ screen and (min-device-pixel-ratio: 2) {
 .mail-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-left: 80px;
+    align-items: center;
 }
 
 .text-form-footer {
@@ -691,9 +728,7 @@ screen and (min-device-pixel-ratio: 2) {
 
 .mail-form {
     display: flex;
-    gap: 24px;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
 }
 
 .title-form {
@@ -704,7 +739,7 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 .footer-mail-field {
-    width: 264px;
+    width: 288px;
     height: 40px;
     border-radius: 4px;
     font-size: 12px;
@@ -712,10 +747,12 @@ screen and (min-device-pixel-ratio: 2) {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     background-color: transparent;
     padding: 8px 16px;
-    line-height: 1.5;
+    line-height: 2;
     color: #ffffff;
     letter-spacing: 0.04em;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15))
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    margin-bottom: 16px;
+    opacity: 0.3;
 }
 
 .footer-mail-field::placeholder {
@@ -723,21 +760,19 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 .btn-form-footer {
-    display: flex;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     display: inline-flex;
-    min-width: 165px;
+    width: 165px;
     padding: 8px 24px;
-    justify-content: center;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
     background-color: #4D5AE5;
     color: #FFF;
-    text-align: center;
     border: none;
 }
 
@@ -746,6 +781,72 @@ screen and (min-device-pixel-ratio: 2) {
     fill: #FFF;
 }
 
+@media (min-width: 768px) {
+    .page-footer-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+    }
+
+    .logo-footer {
+        justify-content:flex-start
+    }
+
+    .text-bottom {
+        max-width: 264px;
+    }
+
+    .mail-container {
+        align-items: flex-start;
+    }
+
+    .social-bottom-container {
+        align-items: flex-start;
+    }
+    
+    .mail-form {
+        flex-direction: row;
+        gap: 24px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-mail-field {
+        width: 264px;
+        margin-bottom: 0;
+    }
+
+    .btn-form-footer {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+@media (min-width: 1158px) {
+    .page-bottom {
+        padding: 100px 0;
+    }
+
+    .page-footer-container {
+        align-items: baseline;
+        gap: 0;
+    }
+
+    .page-bottom-container {
+        margin-bottom: 0;
+        margin-right: 120px;
+    }
+
+    .social-bottom-container {
+        margin-bottom: 0;
+        margin-right: 80px;
+    }
+
+    .footer-mail-field {
+        opacity: 1;
+    }
+}
 /* ========== FOOTER ========== */
 
 /* ========== MENU MOBILE ========== */
@@ -831,9 +932,9 @@ screen and (min-device-pixel-ratio: 2) {
 
 .form-page {
     position: absolute;
-    padding: 72px 24px 24px 24px;
-    width: 408px;
-    min-height: 584px;
+    padding: 72px 16px 24px 16px;
+    width: 288px;
+    min-height: 623px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -945,6 +1046,7 @@ screen and (min-device-pixel-ratio: 2) {
     outline: 0px solid transparent;
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0.5;
 }
 
 .field-form-comment::placeholder {
@@ -971,6 +1073,7 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 .rules-chekbox {
+    display: flex;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -989,6 +1092,12 @@ screen and (min-device-pixel-ratio: 2) {
     margin-right: 8px;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-rules {
+    display: flex; 
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .chek-svg {
@@ -1024,4 +1133,17 @@ screen and (min-device-pixel-ratio: 2) {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
+@media (min-width: 768px) {
+    .form-page {
+        padding: 72px 25px 24px 23px;
+        width: 408px;
+        min-height: 584px;
+    }
+}
+
+@media (min-width: 1158px) {
+    .form-page {
+        padding: 72px 24px 24px 24px;
+    }
+}
 /* ========== FORM ========== */
