--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ button {
 }
 
 @media (max-width: 767px) {
+
     .menu-header,
     .site-address {
         display: none;
@@ -192,7 +193,7 @@ button {
     .site-header {
         width: 1158px;
     }
-    
+
     .site-address {
         font-size: 16px;
         line-height: 1.5;
@@ -212,6 +213,7 @@ button {
         padding-bottom: 24px;
     }
 }
+
 /* ========== HEADER ========== */
 
 /* ========== MAIN ========== */
@@ -233,9 +235,9 @@ button {
 screen and (min-resolution: 2ddx),
 screen and (min-device-pixel-ratio: 2) {
     .title-page {
-      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mobile@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mobile@2x.jpg);
     }
-  }
+}
 
 .title {
     color: #FFF;
@@ -272,34 +274,35 @@ screen and (min-device-pixel-ratio: 2) {
 .order-page:hover,
 .order-page:focus {
     background-color: #404BBF;
-} 
+}
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
     .container {
         max-width: 736px;
     }
-    
+
     .title-page {
         max-width: 768px;
         padding: 112px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet.jpg); ;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet.jpg);
+        ;
     }
 
     @media screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2ddx),
     screen and (min-device-pixel-ratio: 2) {
         .title-page {
-          background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet@2x.jpg);
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet@2x.jpg);
         }
-      }
-    
+    }
+
     .title {
         font-size: 56px;
         line-height: 1.07;
         max-width: 496px;
         padding: 0;
     }
-    
+
     .order-page {
         margin-top: 36px;
     }
@@ -311,25 +314,27 @@ screen and (min-device-pixel-ratio: 2) {
         padding-left: 15px;
         padding-right: 15px;
     }
-    
+
     .title-page {
         max-width: 1158px;
         padding: 188px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-pc.jpg); ;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-pc.jpg);
+        ;
     }
 
     @media screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2ddx),
     screen and (min-device-pixel-ratio: 2) {
         .title-page {
-          background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-pc@2x.jpg);
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-pc@2x.jpg);
         }
-      }
-    
+    }
+
     .order-page {
         margin-top: 48px;
     }
 }
+
 /* ========== section 1 ========== */
 
 /* ========== section 2 ========== */
@@ -420,7 +425,7 @@ screen and (min-device-pixel-ratio: 2) {
     .container {
         width: 1158px;
     }
-    
+
     .section {
         padding-top: 120px;
         padding-bottom: 120px;
@@ -441,15 +446,16 @@ screen and (min-device-pixel-ratio: 2) {
         line-height: 1.2;
         letter-spacing: 0.02em;
     }
-    
+
     .text-page {
         font-weight: 400;
     }
 }
+
 /* ========== section 2 ========== */
 
 /* ========== section 3 ========== */
- 
+
 .personnel-page {
     background-color: #F4F4FD;
 }
@@ -552,14 +558,14 @@ screen and (min-device-pixel-ratio: 2) {
 
 @media (min-width: 1158px) {
     .menu-team {
-        gap:24px;
+        gap: 24px;
     }
 }
 
 /* ========== section 3 ========== */
 
 /* ========== section 4 ========== */
- 
+
 .portfolio-title {
     color: #2e2f42;
     font-size: 36px;
@@ -621,7 +627,7 @@ screen and (min-device-pixel-ratio: 2) {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-} 
+}
 
 @media (min-width: 768px) {
     .portfolio-list {
@@ -782,7 +788,7 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 @media (min-width: 768px) {
-    .page-footer-container{
+    .page-footer-container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -790,7 +796,7 @@ screen and (min-device-pixel-ratio: 2) {
     }
 
     .logo-footer {
-        justify-content:flex-start
+        justify-content: flex-start
     }
 
     .text-bottom {
@@ -804,7 +810,7 @@ screen and (min-device-pixel-ratio: 2) {
     .social-bottom-container {
         align-items: flex-start;
     }
-    
+
     .mail-form {
         flex-direction: row;
         gap: 24px;
@@ -847,6 +853,7 @@ screen and (min-device-pixel-ratio: 2) {
         opacity: 1;
     }
 }
+
 /* ========== FOOTER ========== */
 
 /* ========== MENU MOBILE ========== */
@@ -876,7 +883,7 @@ screen and (min-device-pixel-ratio: 2) {
     color: #2e2f42;
     font-size: 36px;
     font-weight: 700;
-    line-height: 1,11;
+    line-height: 1, 11;
 }
 
 .menu-mobile-address {
@@ -887,7 +894,7 @@ screen and (min-device-pixel-ratio: 2) {
     list-style-type: none;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1,2;
+    line-height: 1, 2;
 }
 
 .menu-mobile-link {
@@ -906,11 +913,12 @@ screen and (min-device-pixel-ratio: 2) {
     column-gap: 40px;
     margin-top: 48px;
 }
+
 /* ========== MENU MOBILE ========== */
 
 /* ========== FORM ========== */
 
- .backdrop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -1095,7 +1103,7 @@ screen and (min-device-pixel-ratio: 2) {
 }
 
 .text-rules {
-    display: flex; 
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -1131,7 +1139,7 @@ screen and (min-device-pixel-ratio: 2) {
     border-radius: 4px;
     color: #FFF;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
+}
 
 @media (min-width: 768px) {
     .form-page {
@@ -1146,4 +1154,5 @@ screen and (min-device-pixel-ratio: 2) {
         padding: 72px 24px 24px 24px;
     }
 }
+
 /* ========== FORM ========== */
